fix *-* on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -107,7 +107,7 @@ section.card {
     }
     .last {
       display: flex;
-      gap: .5rem;
+      gap: 1rem;
     }
 
     h2 {
